--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="container home_2col">
     <div class="row">
       <div class="col">
-        <img src="images/house.jpg" class="rounded d-block dibley" alt="...">
+        <img src="images/lamb.jpg" class="rounded d-block dibley" alt="...">
       </div>
       <div class="col">
         <h1>Ayhan Aydin: WEBD-225</h1>
@@ -41,9 +41,13 @@
     </div>
   </div><!--end 2col-->
 
-  <p>This is filler text, otherwise known as lorem ipsum. It is nonsense text to fill space.</p>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc commodo hendrerit mi, et ultrices quam mollis at. Donec in nulla et sapien ultrices lacinia. Curabitur nunc nisi, volutpat non fringilla vitae, dapibus eu lacus. Curabitur sed velit molestie, scelerisque enim posuere, feugiat urna. Sed gravida rutrum lectus. Ut mattis ligula non cursus euismod. Ut ac egestas libero. Nam vulputate metus quis urna convallis vestibulum.</p>
+  <p>My name is Ayhan Aydin. I am enrolled in the CIS program. I graduate next year!!</p>
+  <article> 
+  <h2> Week 2</h2>
+    <p> This week I learned how to create live versions of my website files using GitHub pages.   to </p>
+  </article>
 </main><!-- /.container -->
+  
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
