--- a/carousel.html
+++ b/carousel.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Carousel: Firstname Lastname</title>
+    <title>Carousel: Ayhan Aydin</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
 </nav>
 
 <main role="main" class="container-fluid">
-    <h2>Carousel</h2>
+    <h2>Adventures in Turkey</h2>
 <!--Add carousel here-->
 <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-indicators">
