--- a/carousel.html
+++ b/carousel.html
@@ -42,28 +42,28 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="sea.jpg" class="d-block w-100" alt="Sea">
+      <img src="images/sea.jpg" class="d-block w-100" alt="Sea">
       <div class="carousel-caption d-none d-md-block">
         <h5>Moments in Turkey 1</h5>
         <p>Swimming with my dad</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="fish.jpg" class="d-block w-100" alt="Fish">
+      <img src="images/fish.jpg" class="d-block w-100" alt="Fish">
       <div class="carousel-caption d-none d-md-block">
         <h5>Moments in Turkey 2</h5>
         <p>Feeding the fishes.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="side.jpg" class="d-block w-100" alt="Side View">
+      <img src="images/side.jpg" class="d-block w-100" alt="Side View">
       <div class="carousel-caption d-none d-md-block">
         <h5>Moments in Turkey 3</h5>
         <p>Enjoying the sunny view.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="ship.jpg" class="d-block w-100" alt="Ship">
+      <img src="images/ship.jpg" class="d-block w-100" alt="Ship">
       <div class="carousel-caption d-none d-md-block">
         <h5>Moments in Turkey 4</h5>
         <p>Enjoying the video again!</p>
