--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Lastname Firstname: 225</title>
+    <title>Ayhan Aydin: 225</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
     <!-- Bootstrap core CSS -->
     <link href="css/styles.css" rel="stylesheet">
@@ -43,22 +43,26 @@
 </nav>
 
 <main role="main" class="container-fluid">
-    <div id="h1"></div>
-    <div id="img"></div>
-    <div id="content"></div>
+<h1 class="text-primary text-center">Get in Touch</h1>
+<h2 class="text-center">Fill out the form and I'll reach out to you!</h2>
+<div class="container">
+    <form action="#">
+        <div class="form-group">
+            <label for="fname">First Name:</label>
+            <input type="text" class="form-control" id="fname" placeholder="Your First Name" name="fname">
+        </div>
+        <div class="form-group">
+            <label for="lname">Last Name:</label>
+            <input type="text" class="form-control" id="lname" placeholder="Your Last Name" name="lname">
+        </div>
+        <div class="form-group">
+            <label for="email">Email Address:</label>
+            <input type="email" class="form-control" id="email" placeholder="Your Email" name="email">
+        </div>
+        <button type="submit" class="btn btn-primary">Send</button>
+    </form>
+</div>
 
-    <script>
-        const user = {
-            name: '',
-            imageUrl: '',
-            bio: ''
-        };
-
-        // Step one - Create a React element
-
-        // Step 2: Render the React element
-
-    </script>
 
 </main><!-- /.container -->
 
