--- a/program.html
+++ b/program.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Lastname Firstname: 225</title>
+    <title>CIS Progress</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
     <!-- Bootstrap core CSS -->
     <link href="css/styles.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Firstname Lastname</a>
+    <a class="navbar-brand" href="#">Ayhan Aydin</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,39 +26,39 @@
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="grid.html">Grid</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="components.html">Carousel</a>
+                <a class="nav-link" href="Carousel">Carousel</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="program.html">Contact</a>
             </li>
         </ul>
     </div>
 </nav>
 
 <main role="main" class="container-fluid">
-    <div id="h1"></div>
-    <div id="img"></div>
-    <div id="content"></div>
-
-    <script>
-        const user = {
-            name: '',
-            imageUrl: '',
-            bio: ''
-        };
-
-        // Step one - Create a React element
-
-        // Step 2: Render the React element
-
-    </script>
+<h1 style="color:blue; text-align:center;">
+    Program Completion
+</h1>
+<div class="container">
+    <div class="progress" style="height:25px; background-color: #e0e0e0;">
+        <div class="progress-bar bg-info" style="width:70%; height:25px;">
+        </div>
+    </div>
+        <h2 class="text-center mt-2">
+        Time left until CIS degree is completed
+        </h2>
+</div>
 
 </main><!-- /.container -->
 
