--- a/about.html
+++ b/about.html
@@ -69,6 +69,10 @@
     </script>
 
 </main><!-- /.container -->
+<footer style="background-color: #333; color: white; padding: 10px; text-align: center;">
+  <p>Author: Ayhan Aydin<br>
+  <a href="mailto:ayhan@google.com" style="color: #a9a9a9;">ayhan@google.com</a></p>
+</footer>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
