--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="program.html">Contact</a>
+                <a class="nav-link" href="program.html">Program</a>
             </li>
         </ul>
     </div>
