--- a/about.html
+++ b/about.html
@@ -70,9 +70,9 @@
     </script>
 
 </main><!-- /.container -->
-<footer style="background-color: #333; color: white; padding: 10px; text-align: center;">
+<footer>
   <p>Author: Ayhan Aydin<br>
-  <a href="mailto:ayhan@google.com" style="color: #a9a9a9;">ayhan@google.com</a></p>
+  <a href="mailto:ayhan@google.com";">ayhan@google.com</a></p>
 </footer>
 
 <!-- Bootstrap core JavaScript
