--- a/carousel.html
+++ b/carousel.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Carousel: Ayhan Aydin</title>
+    <link rel="icon" type="image/x-icon" href="/images/images.png">
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +37,7 @@
          <a class="nav-link" href="contact.html">Contact</a>
        </li>
             <li class="nav-item">
-          <a class="nav-link" href="program.html">Contact</a>
+          <a class="nav-link" href="program.html">Program</a>
             </li>
         </ul>
     </div>
@@ -91,7 +92,10 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
+<footer>
+  <p>Author: Ayhan Aydin<br>
+  <a href="mailto:ayhan@google.com";">ayhan@google.com</a></p>
+</footer>
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
