--- a/grid.html
+++ b/grid.html
@@ -6,6 +6,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Grid: Ayhan Aydin</title>
+  <link rel="icon" type="image/x-icon" href="/images/images.png">
   <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
   <!-- Bootstrap core CSS -->
   <link href="css/styles.css" rel="stylesheet">
@@ -37,7 +38,7 @@
          <a class="nav-link" href="contact.html">Contact</a>
        </li>
        <li class="nav-item">
-          <a class="nav-link" href="program.html">Contact</a>
+          <a class="nav-link" href="program.html">Program</a>
        </li>
     </ul>
   </div>
@@ -56,7 +57,10 @@
   </div>
 
 </main><!-- /.container -->
-
+<footer>
+  <p>Author: Ayhan Aydin<br>
+  <a href="mailto:ayhan@google.com";">ayhan@google.com</a></p>
+</footer>
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
