--- a/program.html
+++ b/program.html
@@ -9,7 +9,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
     <!-- Bootstrap core CSS -->
     <link href="css/styles.css" rel="stylesheet">
-
+  <link rel="icon" type="image/x-icon" href="/images/images.png">
     <!-- Custom styles for this template -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="program.html">Contact</a>
+                <a class="nav-link" href="program.html">Program</a>
             </li>
         </ul>
     </div>
@@ -58,10 +58,14 @@
         <h2 class="text-center mt-2">
         Time left until CIS degree is completed
         </h2>
+    <p> I have finished my Associate at MCTC. Now I am enrolled in the CIS program at Champlain College. I graduate next year. Wish me luck</p>
 </div>
 
 </main><!-- /.container -->
-
+<footer>
+  <p>Author: Ayhan Aydin<br>
+  <a href="mailto:ayhan@google.com";">ayhan@google.com</a></p>
+</footer>
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
