--- a/program.html
+++ b/program.html
@@ -47,19 +47,19 @@
 </nav>
 
 <main role="main" class="container-fluid">
-<h1 style="color:blue; text-align:center;">
-    Program Completion
-</h1>
-<div class="container">
-    <div class="progress" style="height:25px; background-color: #e0e0e0;">
-        <div class="progress-bar bg-info" style="width:70%; height:25px;">
+ <h1 class="heading">
+        Program Completion
+    </h1>
+    <div class="container">
+        <div class="progress-bar-container">
+            <div class="progress-bar"></div>
         </div>
-    </div>
-        <h2 class="text-center mt-2">
-        Time left until CIS degree is completed
+        <h2 class="sub-heading">
+            Time left until CIS degree is completed
         </h2>
-    <p> I have finished my Associate at MCTC. Now I am enrolled in the CIS program at Champlain College. I graduate next year. Wish me luck</p>
-</div>
+        <p class="description">
+            I have finished my Associate's at MCTC. Now I am enrolled in the CIS program at Champlain College. I graduate next year. Wish me luck.
+        </p>
 
 </main><!-- /.container -->
 <footer>
